# software-challenge-EpigeneLabs

./: README.md
backend/: README.md  pyproject.toml
frontend/: index.html  package-lock.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/Components/: ActionButton.tsx  AddGeneButton.tsx  GenesetCard.tsx  GenesetModal.tsx
frontend/src/Types/: global.types.ts
