[project]
name = "software-challenge"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = ["Marine Charnet <marine@epigenelabs.com>", "Antoine Gaston <antoine@epigenelabs.com>"]
dependencies = [
    "fastapi>=0.115.5",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]
